# rabbit-demo

./: Cargo.toml  Makefile  readme.md
consumer/: Cargo.toml
consumer/src/: main.rs
docker_file/: dockerfile_consume  dockerfile_produce
producer/: Cargo.toml
producer/src/: main.rs
src/: main.rs
