[package]
name = "rabbitmq_20230521"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
lapin={version="2.2.1", features = ["rustls"]}
futures-lite = "1.13.0"
async-global-executor = "2.3.1"
serde_json = "1.0.96"
serde = {version= "1.0.163", features=["derive"]}
flexbuffers = "2.0.0"
uuid = {version ="1.3.3", features=["v4", "serde"]}

# https://docs.rs/tokio/latest/tokio/
tokio={version="1.28.1",features=["rt-multi-thread", "time",]}